# applifting_exercise

./: .env  .env.template  .gitignore  README.md  assignment.md  assignment.txt  consts.py  db.py  docker-compose.yml  dockerfile  main.py  models.py  offers.py  playground.py  pyproject.toml  pytest.ini  query.db  run_db.sh  util.py
.direnv/: flake-profile-1-link
.github/workflows/: test.yml
coverage/: lcov.info
scripts/: query.db  run_db.sh
src/: auth.py  background.py  db.py  env.py  errors.py  logger.py  main.py  models.py  offers.py  orm_models.py  pydantic_models.py  schemas.py  util.py
src/endpoints/: auth.py  products.py
src/exceptions/: base.py  external.py  internal.py
src/middleware/: exception.py
src/services/: product.py
src/tests/: test_offers.py
tests/: conftest.py  test_db.py  test_models.py  test_offers.py
tests/endpoints/products/: test_product_get.py
tests/offers/: test_fetch_new_token_from_api.py  test_fetch_token_from_db.py  test_other.py
tests/offers/endpoints/: test_products.py
tests/services/products/: test_get.py
